kubernetes/mongo-deployment.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mongo
  labels:
    app: reddit
    component: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit
      component: mongo
      comment-db: "true"
      post-db: "true"
  template:
    metadata:
      name: mongo
      labels:
        app: reddit
        component: mongo
        comment-db: "true"
        post-db: "true"
    spec:
      containers:
      - image: mongo:3.2
        name: mongo
        volumeMounts:
          - name: mongo-gce-pd-storage
            mountPath: /data/db
      volumes:
        - name: mongo-gce-pd-storage
          gcePersistentDisk:
            pdName: reddit-mongo-disk
            fsType: ext4
