kubernetes/ui-ingress.yml
---

# See https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
#   for details on using reserved external ip
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/ingress.allow-http: "false"
 #   kubernetes.io/ingress.global-static-ip-name: ui-ingress-lb
spec:
  tls:
    - secretName: ui-ingress
  backend:
    serviceName: ui
    servicePort: 9292
